# bevy_pin

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yaml
crates/brp_helper/: Cargo.toml
crates/brp_helper/examples/: query_with_data.rs  query_world.rs  test_api.rs
crates/brp_helper/src/: ext.rs  lib.rs  methods.rs  types.rs
crates/brp_stream_helper/: Cargo.toml
crates/brp_stream_helper/examples/: watch_get_components.rs  watch_list_components.rs
crates/brp_stream_helper/src/: ext.rs  lib.rs
crates/json_rpc_helper/: Cargo.toml
crates/json_rpc_helper/examples/: test_api.rs
crates/json_rpc_helper/src/: lib.rs
crates/stream_helper/: Cargo.toml
crates/stream_helper/examples/: watch_sse.rs
crates/stream_helper/src/: lib.rs
examples/: demo_game.rs
make/: audio.mk  itch.mk  web.mk
src/: main.rs  prelude.rs  utils.rs  version.rs
src/manager/: mod.rs
src/manager/component/: mod.rs
src/manager/component/component_data/: mod.rs
src/manager/component/entity_list/: ui.rs
src/manager/component/fetch/: discovery.rs  mod.rs  poll.rs
src/manager/component/inspector/: mod.rs
src/manager/component/monitor/: ui.rs
src/manager/component/query/: insert.rs  mod.rs  ui.rs
src/manager/component/ui/: mod.rs  monitor_panel.rs
src/manager/connection/: mod.rs  reconnect.rs  ui.rs
src/manager/entity_filter/: inspector.rs  mod.rs
src/manager/entity_filter/component_list/: insert_component.rs  list.rs  mod.rs  unknown_issue.rs
src/manager/entity_filter/entity_list/: ui.rs
src/manager/entity_filter/fetch/: discovery.rs  mod.rs
src/manager/entity_filter/query/: history.rs  insert.rs  mod.rs
src/manager/entity_filter/ui/: mod.rs
src/manager/entity_lookup/: found.rs  history.rs  lookup.rs  mod.rs
src/manager/entity_query/: mod.rs  rpc.rs
src/manager/entity_query/component_data/: mod.rs
src/manager/entity_query/entity_list/: mod.rs  ui.rs
src/manager/entity_query/fetch/: discovery.rs  poll.rs
src/manager/entity_query/inspector/: mod.rs
src/manager/entity_query/query/: history.rs  insert.rs
src/manager/entity_query/ui/: mod.rs
src/manager/new_scene/: history.rs  insert.rs  mod.rs  spawned.rs
src/manager/new_scene/insert/: mod.rs
src/manager/pinboard/: load_save.rs  mod.rs  pin_card.rs  pincard.rs  ui.rs
src/manager/resource/: mod.rs  ui.rs
src/manager/resource/fetch/: discovery.rs  mod.rs  poll.rs
src/manager/resource/update/: mod.rs
src/manager/state/: mod.rs  ui.rs
src/manager/state/get/: discovery.rs  mod.rs  poll.rs  variants.rs
src/manager/workspace/: load_save.rs  mod.rs  pin_card.rs  ui.rs
src/ui/: debug.rs  mod.rs
src/ui/body/: mod.rs
src/ui/body/content/: mod.rs
src/ui/body/sidebar/: ui.rs
src/ui/header/: mod.rs
src/ui/theme/: palette.rs
src/ui_layout/: mod.rs
src/ui_layout/body/: mod.rs
src/ui_layout/body/content/: mod.rs
src/ui_layout/body/sidebar/: mod.rs  ui.rs
src/ui_layout/header/: mod.rs
src/ui_layout/theme/: mod.rs  palette.rs
src/ui_layout/theme/widgets/: close_button.rs  explorer_card.rs  global_message.rs  mod.rs  pin_button.rs  remove_button.rs  scrollable_panel.rs  unpincard.rs
src/ui_layout/theme/widgets/entity_card/: childof.rs  children.rs  components.rs  highlight.rs  interaction.rs  layout.rs  mod.rs  resize.rs  rpc.rs
