[workspace]
members = [".", "crates/brp_helper"]

[workspace.dependencies]
bevy = { branch = "main", git = "https://github.com/bevyengine/bevy", default-features = false }
ehttp = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"

[package]
name = "bevy_pin"
version = "0.1.5"
edition = "2024"
readme = "README.md"
description = "A remote ECS inspector and monitor for Bevy (WASM-based)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rockcen9/bevy_pin"
keywords = ["bevy", "inspector", "reflect"]
categories = ["development-tools::debugging", "wasm"]
exclude = ["/assets", "/docs"]

[dependencies]
bevy = { workspace = true, features = ["bevy_scene", "2d", "ui"] }
brp_helper = { path = "crates/brp_helper" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "UrlSearchParams",
] }
wasm-bindgen = { version = "=0.2.108", optional = true }
webbrowser = { version = "1" }


[features]
default = []

backend = []
state = []
resource = []
component = []
dev = [
    "bevy/bevy_dev_tools",
    "bevy/track_location",
    "bevy/bevy_ui_debug",
    "bevy/debug",
    "bevy/dev",
]
dev_native = ["dev", "bevy/bevy_remote"]
web = ["bevy/webgpu", "dep:wasm-bindgen"]
release = []


[dev-dependencies]
bevy = { workspace = true, features = ["bevy_remote", "2d", "ui"] }

[workspace.metadata.release]
pre-release-hook = [
    "git",
    "cliff",
    "-o",
    "CHANGELOG.md",
    "--tag",
    "{{version}}",
]
