[workspace]
members = [
    ".",
    "crates/json_rpc_helper",
    "crates/brp_helper",
    "crates/stream_helper",
    "crates/brp_stream_helper",
]

[workspace.dependencies]
bevy = { branch = "main", git = "https://github.com/bevyengine/bevy", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false }
tokio = { version = "1" }
anyhow = "1.0.102"
brp_stream_helper = { path = "crates/brp_stream_helper" }
stream_helper = { path = "crates/stream_helper" }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
brp_helper = { path = "crates/brp_helper" }
json_rpc_helper = { path = "crates/json_rpc_helper" }
[package]
name = "bevy_pin"
version = "0.1.18"
edition = "2024"
readme = "README.md"
description = "A remote ECS inspector and monitor for Bevy (WASM-based)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rockcen9/bevy_pin"
keywords = ["bevy", "inspector", "reflect"]
categories = ["development-tools::debugging", "wasm"]
exclude = ["/assets", "/docs"]

[dependencies]
bevy = { workspace = true, features = ["bevy_scene", "2d", "ui"] }
brp_helper = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "UrlSearchParams",
] }
bevy-persistent = { git = "https://github.com/rockcen9/bevy-persistent", rev = "dde32eb28574a6772097023753e10e72721d1279", features = [
    "json",
] }
wasm-bindgen = { version = "=0.2.108", optional = true }
webbrowser = { version = "1" }
anyhow = { workspace = true }


[features]
default = []
local-web = []
backend = []
dev = [
    "bevy/bevy_dev_tools",
    "bevy/track_location",
    "bevy/bevy_ui_debug",
    "bevy/debug",
    "bevy/dev",
]
dev_native = ["dev", "bevy/bevy_remote"]
web = ["bevy/webgpu", "dep:wasm-bindgen"]
release = []


[dev-dependencies]
bevy = { workspace = true, features = ["bevy_remote", "2d", "ui"] }

[workspace.metadata.release]
pre-release-hook = [
    "git",
    "cliff",
    "-o",
    "CHANGELOG.md",
    "--tag",
    "{{version}}",
]
