[package]
name = "brp_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["debug"] }
ehttp = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = "0.1"

[dev-dependencies]
bevy = { workspace = true, features = ["debug"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
