[package]
name = "brp_helper"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
bevy = { workspace = true, features = ["debug"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }

[dependencies]
bevy = { workspace = true }
json_rpc_helper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
