[package]
name = "json_rpc_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["debug"] }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
tokio = { workspace = true, features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true, features = ["json"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
bevy = { workspace = true, features = ["debug"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
