[package]
name = "stream_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls", "stream", "json"] }
tokio = { workspace = true, features = ["rt", "net", "time", "sync", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true, features = ["stream", "json"] }

[[example]]
name = "watch_sse"
path = "examples/watch_sse.rs"

[dev-dependencies]
bevy = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
brp_helper = { workspace = true }
